# lakefs-acl-server

./: .gitignore  LICENSE.md  docker-compose.yml
doc/: plan.md
lakefs-acl/: README.md  pyproject.toml
lakefs-acl-server/: .gitignore  Dockerfile  pyproject.toml
lakefs-acl-server/app/: auth.py  db.py  main.py  models.py
lakefs-acl-server/app/api/: users.py
lakefs-acl-server/tests/: test_users_api.py
lakefs-acl/app/: init_defaults.py  main.py  schemas.py
lakefs-acl/app/api/routes/: __init__.py  credentials.py  groups.py  policies.py  users.py
lakefs-acl/app/auth/: auth.py
lakefs-acl/app/models/: __init__.py  base.py  credential.py  group.py  policy.py  user.py
lakefs-acl/app/repositories/: credential_repository.py  group_repository.py  policy_repository.py  user_repository.py
lakefs-acl/app/schemas/: credential.py  group.py  policy.py  user.py
lakefs-acl/app/services/: credential_service.py  group_service.py  policy_service.py  user_service.py
lakefs-acl/tests/: conftest.py  test_credentials_api.py  test_groups_api.py  test_policies_api.py  test_users_api.py
